# esp32-epaper

./: .gitignore  CMakeLists.txt  DEV_Config.c  EPD_2in13.c  GUI_Paint.c  LICENSE  README.md  idf_component.yml
examples/: README.md
examples/basic/: basic_example.c
fonts/: font12.c  font16.c  font20.c  font24.c  font8.c
include/: DEV_Config.h  Debug.h  EPD_2in13.h  GUI_Paint.h  fonts.h
